[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loadhouse"
version = "0.1.0"
description = "A data loading and transformation engine for data lakehouses"
authors = [{name = "Flynn"}]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "pyspark>=3.2.0",
    "delta-spark>=3.2.0",
    "great-expectations>=0.15.0"
]

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true